# FeELib-for-Houdini

./: .gitignore  MainMenuCommon.xml  OPmenu.xml  PARMmenu.xml  README.md
cpp/: 19.0 - 快捷方式.lnk  CMakeCommand.txt  CMakeLists.txt  GU_FeE_measure.h  SOP_FeE_Normal2D_1_0.proto.h  openCmake.bat  openDocDSO19.0.bat  openDocDSO19.5.bat  openGU.bat  openInclude.bat  openSample - Copy.bat  openSample.bat
cpp/CMakeLists18.5/: CMakeLists.txt
cpp/CMakeLists19.0/: CMakeLists.txt
cpp/CMakeLists19.5/: CMakeLists.txt
cpp/SOP/: SOP_FeE_Adjacency_1_0.cmd  SOP_FeE_AttribCopyFast_1_0.cmd  SOP_FeE_AttribCopy_4_0.cmd  SOP_FeE_AttribScale_1_0.cmd  SOP_FeE_AttribSetToDefault_1_0.cmd  SOP_FeE_Connectivity_1_0.cmd  SOP_FeE_ConvertLine_1_0.cmd  SOP_FeE_DelAllAttribGroup_1_0.cmd  SOP_FeE_DelByGroup_1_0.cmd  SOP_FeE_DelVertex_1_0.cmd  SOP_FeE_ExtractPoint_1_0.cmd  SOP_FeE_GroupCombine_1_0.cmd  SOP_FeE_GroupExpand_1_0.cmd  SOP_FeE_GroupReverse_1_0.cmd  SOP_FeE_GroupUnshared_1_0.cmd  SOP_FeE_GroupVis_2_0.cmd  SOP_FeE_JoinCurve_2_0.cmd  SOP_FeE_Measure_3_0.cmd  SOP_FeE_Normal2D_1_0.cmd  SOP_FeE_PolyCut_3_0.cmd  SOP_FeE_UVScaletoWorldSize_0_5.cmd  SOP_FeE_UVScaletoWorldSize_3_0.cmd  SOP_Star.cmd
cpp/SOP_FeE/: CMakeLists.txt  SOP_FeE.C  SOP_FeE.h  SOP_FeE.txt
cpp/SOP_FeEAttribScale/: CMakeLists.txt  SOP_FeEAttribScale.C  SOP_FeEAttribScale.h
cpp/SOP_FeE_AttribScale_1_0/: CMakeLists.txt  SOP_FeE_AttribScale_1_0.C  SOP_FeE_AttribScale_1_0.h
cpp/SOP_FeE_UVScaletoWorldSize_3_0/: CMakeLists.txt  GU_FeE_measure.h  SOP_FeE_UVScaletoWorldSize_3_0.C  SOP_FeE_UVScaletoWorldSize_3_0.h
cpp/cmake/: FeEHoudiniConfig.cmake
cpp/hip/: FeE Adjacency.hip  FeE Attribute Blend.hip  FeE Attribute Cast.hip  FeE Attribute Copy.hip  FeE Attribute Interpolate Ray.hip  FeE Attribute Promote.hip  FeE Attribute Scale.hip  FeE Attribute Value Replace.hip  FeE Block Stop Condition.hip  FeE Carve.hip  FeE Connectivity.hip  FeE Convert Line2.hip  FeE Delete All Attributes Groups.hip  FeE Delete Element.hip  FeE Delete Vertex.hip  FeE Delete by Group.hip  FeE Enumerate from Attrib.hip  FeE Enumerate.hip  FeE Extract Point.hip  FeE Extract Points.hip  FeE Flat Edge.hip  FeE Fuse.hip  FeE Group Attribute Boundary.hip  FeE Group Combine.hip  FeE Group Expand.hip  FeE Group New Edge.hip  FeE Group Reverse Edges.hip  FeE Group Unshared.hip  FeE Group by Mesh Winding.hip  FeE Intersection Stitch Poly.hip  FeE Match Axis.hip  FeE Match Bounding Box.hip  FeE Measure.hip  FeE Mesh Topology.hip  FeE Normal 2D.hip  FeE Offset Vertex Order.hip  FeE Point Generate per Element.hip  FeE Point Split.hip  FeE Point in Boundin Box.hip  FeE Point in Mesh Winding Number.hip  (+12 more)
cpp/include/: GU_FeE_measure.h  gfe.h  ufe.h
cpp/script/: buildAll.py  cmakeAll.py  cmakeOne.py  delAllBuild.py  genCMakeLists.py  shortcutSln.py
dso/19.0/: cpp - 快捷方式.lnk
examples/: FeE Curve Repair.hip  FeE DeOverlap Graph Color.hip  FeE Voronoi Fracture.hip  FeE minimum area circumscribing polygons.hip  fflowline.hip
examples/VEX/: FeE Convert Line.hip  argsort.hip  sample function.hip
examples/bug/: Diagnostic 19.0.txt  boolean cache bug.hip  compile block too slow.hip
examples/math/: atan2.hip
examples/otlcommon/: FeE Close Polyline.hip  FeE Cluster.hip  FeE Height Field.hip  FeE Inscribed Rectangle.hip  FeE Medial Axis.hip  FeE Poly Debug.hip  FeE Random Divide.hip  FeE Rest Direction.hip  FeE Silhouette Orthogonal.hip  FeE Soft Boolean.hip  FeE Triangle to Quadrangle.hip
examples/otls/: FeE Attribute Delete Empty String.hip  FeE Attribute Scale.hip  FeE Auto UV.hip  FeE Blast Vertices.hip  FeE Combine Poly.hip  FeE Complete Graph.hip  FeE Convex Decomposition.hip  FeE Correct Poly Winding.hip  FeE Curve Repair.hip  FeE Curve Set Resample.hip  FeE Curve Subtract.hip  FeE Dissolve Unshared Edges.hip  FeE Dop Auto Recook.hip  FeE Enumerate from Attrib.hip  FeE Flat Edge.hip  FeE Group Corner Edge.hip  FeE Group Reverse Edges.hip  FeE Group Twisted Edge.hip  FeE Inscribed Rectangle.hip  FeE Longest Edge.hip  FeE Measure.hip  FeE Medial Axis Straight Skeleton 2D Expand.hip  FeE Mesh Expand 2D Prim.hip  FeE Mesh Layout.hip  FeE Normal 2D.hip  FeE Poly Cut Neighbour Count.hip  FeE Poly Expand 2D Debug.hip  FeE Poly Expand 2D Prim Debug Some Case.hip  FeE Poly Expand 2D Prim.hip  FeE Poly Fillet Bevel.hip  FeE Poly Path.hip  FeE Poly Reduce 2D.hip  FeE Separate Poly 2D.hip  FeE UV Sample.hip  FeE UV Scale to World Size.hip  FeE Vertical Normal.hip
examples/unfinished/: black hole.hip
otls/: FeE HDA Parameter Interface.hda  FeE Probability Density Function.hda  smallPieces.hda
otls/2D/: FeE Stack Polygon 2D.hda  FeE UV Layout.hda  FeE UV Rectify.hda
otls/Advect/: FeE Circle Advect.hda
otls/Animate/: FeE Explode View.hda
otls/Attribute/: FeE Attirbute Array Filter.hda  FeE Attirbute Cast.hda  FeE Attirbute Copy.hda  FeE Attirbute Delete Empty Class.hda  FeE Attirbute Extremum.hda  FeE Attirbute Normalize.hda  FeE Attirbute Rescale.hda  FeE Attirbute Variance.hda  FeE Attribute Accumulate.hda  FeE Attribute Array Aggregate.hda  FeE Attribute Blend.hda  FeE Attribute Cast.hda  (+40 more)
scripts/: 456.py
toolbar/: FeE HDA Manger.shelf  FeE OPBatch.shelf  FeE SOP.shelf
(+1232 files in other folders)
